# PyPics

./: .gitignore  LICENSE  README.md  setup.cfg  tests.py
pypics/: __init__.py  funcoes.py
