[metadata]
name = pypics
version = 0.1.1
description = Biblioteca simples para filtros de imagem
long_description = file: README.md
long_description_content_type = text/markdown
author = Maria Isabel Henke, Vitor Hugo Reis de Jesus
author_email = hugo.reisj@hotmail.com
license = MIT
url = https://github.com/o-vitorhugo/pypics

[options]
packages = find:
install_requires =
    Pillow>=12.0
python_requires = >=3.7